tests/pyconverter-test/errors/duplicate_function.py
def on_chat(num1, num2, num3):
     pass
player.on_chat("jump", on_chat)
def on_chat(num1, num2, num3): # 9520
    pass
player.on_chat("jump", on_chat)